--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
   color: #333;
   font-family: lato, sans-serif;
 }
-.aaa {
+.ads-block {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.ads-block img {
   width: 100%;
 }
-.aaa .more-inf {
+.ads-block .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .ads-block { 
     text-align: center;
   }
 }
